# RUEE

./: .env  CMakeLists.txt  README.md  proj3.llvm.html
include/: ConditionalConstProp.h  ConstantFolding.h  DCE.h  LoopInvar.h
src/: CMakeLists.txt  ConditionalConstProp.cpp  ConstantFolding.cpp  DCE.cpp  LoopInvar.cpp
test/testA/: .testA.o.bc  testA  testA.bc  testA.c  testA.ll  testA_ll.ll
test/testB/: testB.bc  testB.c  testB.ll
test/testC/: testC.bc  testC.c  testC.ll
test/testD/: testD.bc  testD.c  testD.ll
tool/: ruee.py
